2010-10-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #15879: htmlArea RTE: Use TYPO3 ExtJS API for RTE notification dialogues

2010-09-30  Francois Suter  <francois@typo3.org>

	* Fixed bug #15639: Scheduler: Add missing classes and interface to autoload registry (Thanks to Marcus Krause)
	* Fixed bug #14997: Performance: t3lib_db->escapeStrForLike() is using preg_replace, which is not necessary (Thanks to Caspar Stuebs and Marcus Krause)
	* Fixed bug #15873: Scheduler: Links on action icons should not be underlined

2010-09-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #12889: fe_adminLib.inc usages deprecated function split() (Thanks to Steffen Kamper and Ismaël Bidau)
	* Fixed bug #15872: Size definition in to restrictive, selector prevents other stylesheet to overwrite icon size (Thanks to Steffen Ritter)

2010-09-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
	* Fixed bug #15863: htmlArea RTE: Initialization never completes in Google Chrome 7

2010-09-29  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15745: Integrate generic notification methods to show windows and dialogs based on ExtJS

2010-09-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #15075: [Install] make a pre-check for required php-extensions (Thanks to Jigal van Hemert)

2010-09-28  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15812: Add backend maintenance for login news - correction for deprecation call
	* Follow-up to #15812: Add backend maintenance for login news - added sprites for icon

2010-09-28  Ingo Renner  <ingo@typo3.org>

	* Added feature #15812: Add backend maintenance for login news

2010-09-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15829: ExtDirect wrong XCLASS registration code (Thanks to Stefan Galinski)

2010-09-27  Stanislas Rolland  <typo3@sjbr.ca>
